# ogl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shader/: basic.frag  basic.vert
src/: main.cpp
src/header/: config.h  config.h.in  util.h
